Fix button color for signin page (dark mode)

--- a/scss/site/theme.scss
+++ b/scss/site/theme.scss
@@ -388,6 +388,15 @@
             .selected.nav-item {
                 box-shadow: inset 0 -2px 0 0 #fff;
             }
+
+            .nav-item {
+                &,
+                &:hover {
+                    .btn-default {
+                        color: color.shade(fg, 8%);
+                    }
+                }
+            }
         }
     }
 
